[gd_scene load_steps=20 format=3 uid="uid://b15ao87wkybpx"]

[ext_resource type="Script" uid="uid://l6cydtwyhkm5" path="res://Scripts/Boss/first_boss.gd" id="1_21v6b"]
[ext_resource type="Texture2D" uid="uid://lijbavn8s3mi" path="res://Sprites/Boss/Boss1.png" id="1_wj1q4"]
[ext_resource type="Texture2D" uid="uid://crspjryfdho3i" path="res://Sprites/Boss/Boss2.png" id="2_lmuce"]
[ext_resource type="Texture2D" uid="uid://orda6o4vaa8c" path="res://Sprites/Boss/Boss3.png" id="3_dn0gb"]
[ext_resource type="Texture2D" uid="uid://dl0tncamekp7m" path="res://Sprites/Boss/Boss4.png" id="4_mdqaa"]
[ext_resource type="Script" uid="uid://dxdvo2g2viwgl" path="res://Scripts/Boss/boss_body.gd" id="5_ic5w6"]
[ext_resource type="PackedScene" uid="uid://c1cm4q3gijxok" path="res://Scenes/Boss/boss_hands.tscn" id="5_pwilx"]
[ext_resource type="PackedScene" uid="uid://dcqgqtr04erq2" path="res://Scenes/Particles/hit_particle_boss.tscn" id="8_qpvjk"]
[ext_resource type="AudioStream" uid="uid://facj8dwk7al0" path="res://Sounds/Boss/hurt_variant3.sfxr" id="9_lm6db"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0487o"]
atlas = ExtResource("1_wj1q4")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3qdj"]
atlas = ExtResource("2_lmuce")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_a64v2"]
atlas = ExtResource("3_dn0gb")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaaxn"]
atlas = ExtResource("4_mdqaa")
region = Rect2(0, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_difga"]
animations = [{
"frames": [{
"duration": 10.1,
"texture": SubResource("AtlasTexture_0487o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3qdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a64v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaaxn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nosqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nosqe"]
bg_color = Color(0.392157, 0.4, 0.4, 0.658824)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4tro"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4tro"]
bg_color = Color(0.470588, 0.486275, 0.486275, 0.603922)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xite"]
bg_color = Color(0, 1, 0, 1)

[node name="FirstBoss" type="Node2D"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = ExtResource("1_21v6b")
lower_health_color = Color(0.969115, 0, 0.45412, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.8, 0.8, 0.8, 1)
position = Vector2(2, -6)
scale = Vector2(2.845, 2.845)
sprite_frames = SubResource("SpriteFrames_difga")
autoplay = "default"
frame_progress = 0.390366
script = ExtResource("5_ic5w6")

[node name="Hands" parent="." instance=ExtResource("5_pwilx")]
self_modulate = Color(0.8, 0.8, 0.8, 1)

[node name="Hit_particle_boss" parent="." instance=ExtResource("8_qpvjk")]

[node name="TrembleTimer" type="Timer" parent="."]
wait_time = 0.085

[node name="hurt_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_lm6db")
bus = &"Sound Effects"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HUD/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500
theme_override_styles/separator = SubResource("StyleBoxEmpty_nosqe")

[node name="PanelContainer" type="PanelContainer" parent="HUD/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nosqe")

[node name="Label" type="Label" parent="HUD/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Vida"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HUD/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500
theme_override_styles/separator = SubResource("StyleBoxEmpty_v4tro")

[node name="ProgressBar" type="ProgressBar" parent="HUD/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1200, 50)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_v4tro")
theme_override_styles/fill = SubResource("StyleBoxFlat_2xite")
value = 100.0
show_percentage = false

[connection signal="dead" from="." to="Hands" method="_on_first_boss_dead"]
[connection signal="damaged" from="Hands" to="." method="_on_hands_damaged"]
[connection signal="timeout" from="TrembleTimer" to="." method="_on_tremble_timer_timeout"]
